--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
